--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="tic-tac-toe.js" defer></script>
 </head>
 <body>
-    
+    <div class="title">
+        <h1>Tic-Tac-Toe</h1>
+    </div>
+    <div class="board">
+        <div class ="square 01"></div>
+        <div class ="square 02"></div>
+        <div class ="square 03"></div>
+        <div class ="square 10"></div>
+        <div class ="square 11"></div>
+        <div class ="square 12"></div>
+        <div class ="square 20"></div>
+        <div class ="square 21"></div>
+        <div class ="square 22"></div>
+    </div>
 </body>
 </html>
