--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
 <body>
     <div class="title">
         <h1>Tic-Tac-Toe</h1>
+        <div class="players" id="players">
+            <h2>Player 1 = X</h2>
+            <h2>Player 2 = O</h2>
+        </div>
+        <div class="winners none">
+            <h2 class="player1Wins none" >Player 1 Wins!</h2>
+            <h2 class="player2Wins none" >Player 2 Wins!</h2>
+            <h2 class="draw none">It's a Draw!</h2>
+        </div>
+        <div>
+            <button class="resetGame none">Reset Game</button>
+            <button class="startGame">Start Game</button>
+        </div>
     </div>
     <div class="board">
+        <div class ="square 00"></div>
         <div class ="square 01"></div>
         <div class ="square 02"></div>
-        <div class ="square 03"></div>
         <div class ="square 10"></div>
         <div class ="square 11"></div>
         <div class ="square 12"></div>
