functionality and UI finished

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="title">
         <h1>Tic-Tac-Toe</h1>
-        <div class="players" id="players">
+        <div class="players">
             <h2>Player 1 = X</h2>
             <h2>Player 2 = O</h2>
         </div>
-        <div class="winners none">
+        <div class="winners">
             <h2 class="player1Wins none" >Player 1 Wins!</h2>
             <h2 class="player2Wins none" >Player 2 Wins!</h2>
             <h2 class="draw none">It's a Draw!</h2>
         </div>
-        <div>
+        <div class="buttons">
             <button class="resetGame none">Reset Game</button>
             <button class="startGame">Start Game</button>
         </div>
